# Elite-Dangerous_Lore-Explainer-and-Translation-Project

./: .gitignore  README.md
elite-dangerous-translator/: .env.example  README.md  alembic.ini  pyproject.toml
elite-dangerous-translator/app/: __init__.py  main.py
elite-dangerous-translator/app/api/: routes_articles.py  routes_glossary.py  routes_jobs.py  routes_publish.py  routes_settings.py  routes_translation_memory.py
elite-dangerous-translator/app/clients/: __init__.py  deepseek_client.py  email_client.py  gemini_client.py  llm_base.py  openai_client.py  wiki_client.py
elite-dangerous-translator/app/core/: config.py  logging.py  scheduler.py
elite-dangerous-translator/app/db/: base.py  models.py  session.py
elite-dangerous-translator/app/prompts/: review_prompt.txt  tagging_prompt.txt  translate_prompt.txt
elite-dangerous-translator/app/services/: glossary_service.py  ingestion_service.py  job_service.py  notification_service.py  publish_service.py  review_service.py  source_parser_service.py  tagging_service.py  translation_memory_service.py  translation_service.py
elite-dangerous-translator/app/templates/: article_detail.html  dashboard.html  glossary.html  job_detail.html  jobs.html  manual_submit.html  settings.html  (+1 more)
elite-dangerous-translator/data/: app.db
elite-dangerous-translator/scripts/: import_glossary.py  import_translation_memory.py  run_poll_once.py  seed_sample_data.py
elite-dangerous-translator/tests/: test_database.py  test_glossary_service.py  test_health.py  test_manual_submission.py  test_translation_memory_service.py
(+9 files in other folders)
